--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -7,6 +9,16 @@
 
 body, html, #root {
   min-height: 100%;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  background: #ecf0f1;
+}
+
+.App {
+  width: 50%;
+  margin: 0 auto;
 }
 
 .header {
@@ -26,6 +38,6 @@ body, html, #root {
 
 .header h2 {
   color: #9aa1a5;
-  font-size: 0.75rem;
+  font-size: 1rem;
   font-weight: 300;
 }
