--- a/src/components/TodoForm/styles.css
+++ b/src/components/TodoForm/styles.css
@@ -7,6 +7,7 @@
 	width: 100%;
 	height: 2rem;
 	background: none;
+	border: none;
 	border-bottom: 1px solid #34495e;
 	color: #34495e;
 	font-size: 1.2rem;
